--- a/notes-lee.ipynb
+++ b/notes-lee.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,11 +52,11 @@
       "\n",
       "No columns dropped.\n",
       "\n",
-      "Target values: [21 62 61 76 13 52 59 94 82 52 78 27 10 20 33 40 77 64 51  5 88 94 10 68\n",
-      " 89 65 50 94 80 76  1 41 74 56 80  5 19  7 25 65 63 53 26 16 94 85 99 93\n",
-      " 11 80 37 23 77 88 68 29 34 39 49 20 28 13 22 54 70 33 21 55 40 71 66  7\n",
-      " 54 96 79 47 33 40 66 94 11 22 48 66 43 95 45 49 36 47 73 68 94 84 59 53\n",
-      " 65 98 84 94] \n",
+      "Target values: [59 56 34 37 46 26 49 32 81  8 88 99  3 78 67 85 88 95 18 32 20 89 37 93\n",
+      " 14 96 20 83 55 71 59 54 18 86 23 18 87 66 56 25 29 64 38 41 36  9 46 95\n",
+      " 71 73 58 82 96 25 47 71 38 99  7 63 56 10 43 90 81 86 69 47 85 21 98 18\n",
+      " 24 75 53 61 46 29 46 93 13 30 95 16 96 81 63 93 18 32 87  9 20 94 14 49\n",
+      " 83 69 66 91] \n",
       "\n",
       "Column(s) remaining: Index(['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight',\n",
       "       'nine', 'target'],\n",
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "exists\n"
+      "File exists. Returning DataFrame...\n"
      ]
     },
     {
@@ -476,7 +476,7 @@
        "[200 rows x 42 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,50 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_tables():\n",
-    "    '''\n",
-    "    Display database tables.\n",
-    "    '''\n",
-    "    \n",
-    "    # import libraries\n",
-    "    import psycopg2\n",
-    "    import pandas as pd\n",
-    "    \n",
-    "    query = '''\n",
-    "    SELECT tablename\n",
-    "    FROM pg_catalog.pg_tables\n",
-    "    WHERE schemaname != 'pg_catalog'\n",
-    "    AND schemaname != 'information_schema'\n",
-    "    ORDER BY tablename ASC;\n",
-    "    '''\n",
-    "    \n",
-    "    # Creating a connection to the database\n",
-    "    con = psycopg2.connect(database=\"mid_term_project\", \n",
-    "                           user=\"lhl_student\", \n",
-    "                           password=\"lhl_student\", \n",
-    "                           host=\"lhl-data-bootcamp.crzjul5qln0e.ca-central-1.rds.amazonaws.com\", \n",
-    "                           port=\"5432\")\n",
-    "\n",
-    "    # creating cursor and run query\n",
-    "    cur = con.cursor()\n",
-    "    cur.execute(query)\n",
-    "    \n",
-    "    # print table names\n",
-    "    tables = [table[0] for table in cur.fetchall()]\n",
-    "    tables = pd.Series(tables)\n",
-    "    \n",
-    "    con.close()\n",
-    "    \n",
-    "    return tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +532,7 @@
     }
    ],
    "source": [
-    "print(read_tables())"
+    "print(script.read_tables())"
    ]
   },
   {
