'script.read_tables() now takes a 'table_name' argument that returns a list of that table's columns from the database.'

--- a/notes-lee.ipynb
+++ b/notes-lee.ipynb
@@ -52,11 +52,11 @@
       "\n",
       "No columns dropped.\n",
       "\n",
-      "Target values: [59 56 34 37 46 26 49 32 81  8 88 99  3 78 67 85 88 95 18 32 20 89 37 93\n",
-      " 14 96 20 83 55 71 59 54 18 86 23 18 87 66 56 25 29 64 38 41 36  9 46 95\n",
-      " 71 73 58 82 96 25 47 71 38 99  7 63 56 10 43 90 81 86 69 47 85 21 98 18\n",
-      " 24 75 53 61 46 29 46 93 13 30 95 16 96 81 63 93 18 32 87  9 20 94 14 49\n",
-      " 83 69 66 91] \n",
+      "Target values: [25 43 15 20 46 45 88 29 65 79 79 62 70 22 77 68 10 58 56 54 91 59 97 78\n",
+      " 29 27 49 92  4 50 49 82 50 73 62 46 83 61  7 49  6 96 64 83  6 51 28 66\n",
+      " 55 20 13 23 99 61  3 61 94 35 12 85  2 90 52 67 84 73 27 75 26 63 72 80\n",
+      " 37 43 92 96 31 68  9  3 38 55  5 51 24 52 15 94 54 62 27 93 26 30 35 36\n",
+      " 44 20 84 98] \n",
       "\n",
       "Column(s) remaining: Index(['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight',\n",
       "       'nine', 'target'],\n",
@@ -517,22 +517,56 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0             flights\n",
-      "1        flights_test\n",
-      "2    fuel_comsumption\n",
-      "3         pass_sample\n",
-      "4          passengers\n",
-      "5              sample\n",
-      "6          test_table\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0             flights\n",
+       "1        flights_test\n",
+       "2    fuel_comsumption\n",
+       "3         pass_sample\n",
+       "4          passengers\n",
+       "5              sample\n",
+       "6          test_table\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(script.read_tables())"
+    "script.read_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              proname\n",
+       "1         pronamespace\n",
+       "2             proowner\n",
+       "3              prolang\n",
+       "4              procost\n",
+       "             ...      \n",
+       "1815              year\n",
+       "1816             month\n",
+       "1817    distance_group\n",
+       "1818             class\n",
+       "1819       data_source\n",
+       "Length: 1820, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "script.read_tables('passengers')"
    ]
   },
   {
