Changed 'script.make_csv()' to take sample 'limit' argument. Provided example query in docstring.

--- a/notes-lee.ipynb
+++ b/notes-lee.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from psycopg2 import sql\n",
     "import assets.script as script\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.naive_bayes import GaussianNB"
@@ -52,11 +53,11 @@
       "\n",
       "No columns dropped.\n",
       "\n",
-      "Target values: [25 43 15 20 46 45 88 29 65 79 79 62 70 22 77 68 10 58 56 54 91 59 97 78\n",
-      " 29 27 49 92  4 50 49 82 50 73 62 46 83 61  7 49  6 96 64 83  6 51 28 66\n",
-      " 55 20 13 23 99 61  3 61 94 35 12 85  2 90 52 67 84 73 27 75 26 63 72 80\n",
-      " 37 43 92 96 31 68  9  3 38 55  5 51 24 52 15 94 54 62 27 93 26 30 35 36\n",
-      " 44 20 84 98] \n",
+      "Target values: [81 97  5  4 57 26 27 64 92 15 38 70 31 35 38 12 68 87 12 76 78 46 92 50\n",
+      " 96 27 57 85 21 72 91 57 39 53 89 24 38 10 27 35 30 86 35 91 71  9 89 49\n",
+      " 99 17 22  8 60 39 55 95 52 46 91 62 23 74 67 76 41 60 95  4 25 76 34 54\n",
+      " 62 64  8 55 60 85  9 42 13 73  7 31 56 96 59 17 49 31 97 38 30 76 87 17\n",
+      " 94  8 37 91] \n",
       "\n",
       "Column(s) remaining: Index(['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight',\n",
       "       'nine', 'target'],\n",
@@ -512,8 +513,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SQL Query"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name = 'flights_test'\n",
+    "limit = 10000\n",
+    "\n",
+    "query = sql.SQL(\n",
+    "    \"SELECT * FROM {table} LIMIT %s\").format(\n",
+    "        table = sql.Identifier(table_name),\n",
+    "    )\n",
+    "    \n",
+    "filename = 'flights_test_10k_sample.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +554,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,33 +565,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File exists. Returning DataFrame...\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_flights = script.make_csv(query, filename, limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0              proname\n",
-       "1         pronamespace\n",
-       "2             proowner\n",
-       "3              prolang\n",
-       "4              procost\n",
-       "             ...      \n",
-       "1815              year\n",
-       "1816             month\n",
-       "1817    distance_group\n",
-       "1818             class\n",
-       "1819       data_source\n",
-       "Length: 1820, dtype: object"
+       "fl_date               object\n",
+       "mkt_unique_carrier    object\n",
+       "branded_code_share    object\n",
+       "mkt_carrier           object\n",
+       "mkt_carrier_fl_num     int64\n",
+       "op_unique_carrier     object\n",
+       "tail_num              object\n",
+       "op_carrier_fl_num      int64\n",
+       "origin_airport_id      int64\n",
+       "origin                object\n",
+       "origin_city_name      object\n",
+       "dest_airport_id        int64\n",
+       "dest                  object\n",
+       "dest_city_name        object\n",
+       "crs_dep_time           int64\n",
+       "crs_arr_time           int64\n",
+       "dup                   object\n",
+       "crs_elapsed_time       int64\n",
+       "flights                int64\n",
+       "distance               int64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "script.read_tables('passengers')"
+    "df_flights.dtypes"
    ]
   },
   {
