update unique value function

--- a/Testing_Ground-George.ipynb
+++ b/Testing_Ground-George.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f63b9e07-061c-4c92-90d7-42c397c92a33",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "06fbe0dc-de27-4650-ad11-cee3032f64b3",
    "metadata": {},
    "outputs": [],
@@ -36,12 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "cba642f6-8fcd-4e21-95a1-4cc00e55d8f4",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -115,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "66e5a32b-a6dc-4c42-87c4-2c5326dfab65",
    "metadata": {
     "tags": []
@@ -126,15 +123,13 @@
      "output_type": "stream",
      "text": [
       "creating connection...\n",
-      "running query...\n",
-      "writing file...\n",
-      "Done\n"
+      "running query...\n"
      ]
     }
    ],
    "source": [
     "# will create file in place of ipynb file\n",
-    "test = make_csv(\"SELECT * FROM flights LIMIT 1000000\", \"test1000000flight.csv\")"
+    "test = make_csv(\"SELECT * FROM flights LIMIT 100000\", \"test100000flight.csv\")"
    ]
   },
   {
@@ -158,7 +153,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     },
     "tags": []
    },
@@ -1177,12 +1173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "id": "1791ce9b-119a-4b2e-b330-99e5354c4449",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/p7/h49crc791_s32gzljswx64y00000gn/T/ipykernel_34825/1329518249.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'arr_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'nas_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'security_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'late_aircraft_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'carrier_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'weather_delay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'no_name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
+     ]
+    }
+   ],
    "source": [
     "test = test.drop(['dep_delay', 'arr_delay', 'nas_delay', 'security_delay', 'late_aircraft_delay', 'carrier_delay', 'weather_delay', 'no_name'], axis = 1)"
    ]
@@ -6391,11 +6399,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5c384433-ceb6-462b-a07a-ea299e066c10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_scores(y_test, y_pred, y_prob):\n",
+    "    '''\n",
+    "    Print prediction scores.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y_test\n",
+    "        target test data\n",
+    "    y_pred\n",
+    "        target predictions\n",
+    "    y_prob\n",
+    "        target prediction probabilities\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    prints\n",
+    "        1. Confusion Matrix\n",
+    "        2. Recall Score\n",
+    "            TP / (TP + FN)\n",
+    "        3. Precision Score\n",
+    "            TP / (TP + FP)\n",
+    "        4. F1 Score\n",
+    "            2 * precision * recall / (precision + recall)\n",
+    "        5. Accuracy Score\n",
+    "            (TP + TN) / (TP + FP + TN + FN)\n",
+    "        6. ROC-AUC\n",
+    "            TPR vs FPR curve, scored by area under curve\n",
+    "    graphs\n",
+    "        ROC Curve Graph\n",
+    "    '''\n",
+    "    \n",
+    "    # import libraries\n",
+    "    from sklearn.metrics import confusion_matrix, roc_auc_score, recall_score, precision_score, accuracy_score, f1_score\n",
+    "    from sklearn.metrics import RocCurveDisplay\n",
+    "    \n",
+    "    # confusion matrix\n",
+    "    print('Confusion matrix:\\n', confusion_matrix(y_test, y_pred))\n",
+    "    \n",
+    "    print('\\n--------SCORES---------\\n')\n",
+    "    \n",
+    "    # recall scores\n",
+    "    try:\n",
+    "        print('1. Recall Score: ', recall_score(y_test,y_pred))\n",
+    "    except ValueError:\n",
+    "        print('1. Recall Score (multiclass micro)', recall_score(y_test,y_pred, average='micro'))\n",
+    "        print('1. Recall Score (multiclass macro)', recall_score(y_test,y_pred, average='macro'))\n",
+    "    \n",
+    "    # precision scores\n",
+    "    try:\n",
+    "        print('2. Precision Score: ', recall_score(y_test,y_pred))\n",
+    "    except ValueError:\n",
+    "        print('2. Precision Score (multiclass micro)', precision_score(y_test,y_pred, average='micro'))\n",
+    "        print('2. Precision Score (multiclass macro)', precision_score(y_test,y_pred, average='macro'))\n",
+    "\n",
+    "    # f1 scores\n",
+    "    try:\n",
+    "        print('3. F1 Score: ', f1_score(y_test,y_pred))\n",
+    "    except ValueError:\n",
+    "        print('3. F1 Score (multiclass micro)', f1_score(y_test,y_pred, average='micro'))\n",
+    "        print('3. F1 Score (multiclass macro)', f1_score(y_test,y_pred, average='macro'))\n",
+    "    \n",
+    "    print('4. Accuracy Score: ', accuracy_score(y_test,y_pred))\n",
+    "    \n",
+    "    # ROC-AUC scores\n",
+    "    try:\n",
+    "        print('5. ROC-AUC: {}'.format(roc_auc_score(y_test, y_prob[:,1])))\n",
+    "    except ValueError:\n",
+    "        print('5. ROC-AUC (multi-class micro ovo): {}'.format(roc_auc_score(y_test, y_prob[:,1], average='micro', multi_class='ovo')))\n",
+    "        print('5. ROC-AUC (multi-class macro ovo): {}'.format(roc_auc_score(y_test, y_prob[:,1], average='macro', multi_class='ovo')))\n",
+    "        print('5. ROC-AUC (multi-class micro ovr): {}'.format(roc_auc_score(y_test, y_prob[:,1], average='micro', multi_class='ovr')))\n",
+    "        print('5. ROC-AUC (multi-class macro ovo): {}'.format(roc_auc_score(y_test, y_prob[:,1], average='macro', multi_class='ovr')))\n",
+    "    except np.AxisError:\n",
+    "        pass\n",
+    "    \n",
+    "    return RocCurveDisplay.from_predictions(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "704a75c4-41ce-464e-be60-691e51209cb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_scores(y_test, y_pred, y_prob"
+   ]
   }
  ],
  "metadata": {
