updated urn through to add linear regression method

--- a/Run-Through.ipynb
+++ b/Run-Through.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 119,
    "id": "7af4e00a-9814-47a0-8876-e3b8afd1a20b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import xgboost as xgb\n",
     "from sklearn.metrics import mean_squared_error, accuracy_score, classification_report, RocCurveDisplay\n",
-    "import script as sc"
+    "import script as sc\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
@@ -905,8 +906,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
+   "id": "91dd4266-6c36-457a-8178-0b99dd518b92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testl = pd.read_csv('test1000000linflight.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "f017af79-2952-4f8c-a540-41125ddb5981",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testl['crs_dep_time'] = testl['crs_dep_time'].astype('float64')\n",
+    "testl['crs_arr_time'] = testl['crs_arr_time'].astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "f6cde40e-6ffe-4652-84e8-b1b93d6a5810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testl['total_delay'] = (testl['dep_time'] - testl['crs_dep_time']) + (testl['arr_time'] - testl['crs_arr_time']) + (testl['actual_elapsed_time'] - testl['crs_elapsed_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "df8eff90-3535-4975-a050-56d6dfd8ec52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testl = testl.drop(['dep_delay', 'arr_delay', 'nas_delay', 'diverted', 'security_delay', 'late_aircraft_delay', 'carrier_delay', 'weather_delay', 'no_name', 'mkt_carrier', 'branded_code_share', 'origin_city_name', 'origin', 'dest', 'dest_city_name', 'dep_time', 'crs_dep_time', 'arr_time', 'crs_arr_time', 'actual_elapsed_time', 'crs_elapsed_time', 'dup', 'cancelled', 'cancellation_code', 'flights', 'first_dep_time', 'total_add_gtime', 'longest_add_gtime', 'mkt_unique_carrier', 'mkt_carrier_fl_num', 'tail_num', 'op_unique_carrier'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "3b3c6502-8c4c-4bed-b3fb-a9a08516e00e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testl = date_to_dtday(testl, 'fl_date', 'binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "93db40be-a047-4847-aa1d-d06bee47ae00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testl = testl.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "4b6aa53a-70e8-41ef-a87e-451751290be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fl_date              0\n",
+       "op_carrier_fl_num    0\n",
+       "origin_airport_id    0\n",
+       "dest_airport_id      0\n",
+       "taxi_out             0\n",
+       "wheels_off           0\n",
+       "wheels_on            0\n",
+       "taxi_in              0\n",
+       "air_time             0\n",
+       "distance             0\n",
+       "total_delay          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testl.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "e9c22644-fcdf-4a51-a26a-205eb43377c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_coll = 'total_delay'\n",
+    "yl = testl[y_col]\n",
+    "Xl = testl[testl.columns.drop(y_col)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
    "id": "c431881e-ce18-4662-bd53-9a20864d91a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:            total_delay   R-squared:                       0.113\n",
+      "Model:                            OLS   Adj. R-squared:                  0.113\n",
+      "Method:                 Least Squares   F-statistic:                 1.364e+04\n",
+      "Date:                Thu, 12 May 2022   Prob (F-statistic):               0.00\n",
+      "Time:                        15:54:55   Log-Likelihood:            -6.8759e+06\n",
+      "No. Observations:              960347   AIC:                         1.375e+07\n",
+      "Df Residuals:                  960337   BIC:                         1.375e+07\n",
+      "Df Model:                           9                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=====================================================================================\n",
+      "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------\n",
+      "const              -260.2344      3.966    -65.619      0.000    -268.007    -252.461\n",
+      "fl_date            6.199e-11   9.45e-13     65.617      0.000    6.01e-11    6.38e-11\n",
+      "op_carrier_fl_num    -0.0002      0.000     -1.161      0.245      -0.001       0.000\n",
+      "origin_airport_id     0.0021      0.000      9.774      0.000       0.002       0.002\n",
+      "dest_airport_id       0.0003      0.000      1.550      0.121   -8.63e-05       0.001\n",
+      "taxi_out              1.1455      0.033     34.245      0.000       1.080       1.211\n",
+      "wheels_off           -0.1528      0.001   -179.647      0.000      -0.154      -0.151\n",
+      "wheels_on             0.2694      0.001    335.021      0.000       0.268       0.271\n",
+      "taxi_in               1.2330      0.054     22.776      0.000       1.127       1.339\n",
+      "air_time              0.7630      0.029     26.200      0.000       0.706       0.820\n",
+      "distance             -0.1086      0.003    -31.537      0.000      -0.115      -0.102\n",
+      "==============================================================================\n",
+      "Omnibus:                   891489.870   Durbin-Watson:                   1.975\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):        131838714.090\n",
+      "Skew:                          -4.021   Prob(JB):                         0.00\n",
+      "Kurtosis:                      59.834   Cond. No.                     2.61e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 4.74e-21. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xl = sm.add_constant(Xl)\n",
+    "\n",
+    "model = sm.OLS(yl, Xl).fit()\n",
+    "predictinos = model.predict(Xl)\n",
+    "print_model = model.summary()\n",
+    "print(print_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ca1b63d-184a-4c86-8fc7-21b5e5e855da",
    "metadata": {},
    "outputs": [],
    "source": []
